middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homepage-cache-buster
  namespace: default
spec:
  headers:
    customRequestHeaders:
      Cache-Control: "no-cache, no-store, must-revalidate"
      Pragma: "no-cache"
      Expires: "0"
    customResponseHeaders:
      Cache-Control: "no-cache, no-store, must-revalidate"
      Pragma: "no-cache"
      Expires: "0"
