deployment.yaml
---
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: homepage
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 192.168.0.231
          - 192.168.0.232
          - 8.8.8.8
      containers:
      - name: homepage
        image: ghcr.io/gethomepage/homepage:v0.10.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - mountPath: /app/config/custom.js
          name: homepage-config
          subPath: custom.js
        - mountPath: /app/config/custom.css
          name: homepage-config
          subPath: custom.css
        - mountPath: /app/config/bookmarks.yaml
          name: homepage-config
          subPath: bookmarks.yaml
        - mountPath: /app/config/docker.yaml
          name: homepage-config
          subPath: docker.yaml
        - mountPath: /app/config/kubernetes.yaml
          name: homepage-config
          subPath: kubernetes.yaml
        - mountPath: /app/config/services.yaml
          name: homepage-config
          subPath: services.yaml
        - mountPath: /app/config/settings.yaml
          name: homepage-config
          subPath: settings.yaml
        - mountPath: /app/config/widgets.yaml
          name: homepage-config
          subPath: widgets.yaml
        - mountPath: /app/config/proxmox.yaml
          name: homepage-config
          subPath: proxmox.yaml
        - mountPath: /app/config/logs
          name: logs
        - mountPath: /app/public/images
          name: homepage-images
      volumes:
      - name: homepage-config
        configMap:
          name: homepage
      - name: logs
        emptyDir: {}
      - name: homepage-images
        persistentVolumeClaim:
          claimName: homepage-images-v2
