ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: YOUR_HOMEPAGE_DOMAIN_HERE
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 3000
  tls:
  - hosts:
    - YOUR_HOMEPAGE_DOMAIN_HERE
    secretName: YOUR_TLS_SECRET_NAME
